Fix code coverage branch
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,4 +20,10 @@ jobs:
     - name: JaCoCo Report
       run: mvn jacoco:report -B -V
     - name: Coveralls Report
-      run: mvn coveralls:report -DrepoToken=${{ secrets.COVERALLS_TOKEN }} -B -V
+      run: >-
+        mvn coveralls:report
+        -DrepoToken=${{ secrets.COVERALLS_TOKEN }}
+        -Dbranch=${{ github.ref }}
+        -B
+        -V
+        && echo ${{ github.ref }}
