--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>syllable-counter</artifactId>
 
-    <version>4.0.2</version>
+    <version>4.0.3</version>
 
     <packaging>jar</packaging>
 
@@ -133,6 +133,9 @@
                                     <goal>jar</goal>
                                     <goal>javadoc</goal>
                                 </goals>
+                                <configuration>
+                                    <source>8</source>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
