--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,13 @@ jobs:
         java-version: 1.8
     - name: Import GPG key
       run: >-
-        echo "${{ secrets.GPG_KEY }}" > key.asc
-        && gpg
+        gpg
         --allow-secret-key-import
-        --import key.asc
-        && rm key.asc
+        --import
+        --no-tty
+        --batch
+        --yes
+        <(echo "${{ secrets.GPG_KEY }}")
     - name: Test and deploy to OSSRH
       run: >-
         mvn
